hphp/hack/test/typecheck/array_subscript_curly.php.exp
ERROR: File "array_subscript_curly.php", line 4, characters 12-12:
A semicolon `;` is expected here. (Parsing[1002])
