hphp/hack/test/typecheck/array_subscript_curly.php
<?hh

function f(dict<arraykey,mixed> $x): mixed {
  return $x{1};
}
